# Utility

./: .env  A  CMakeCache.txt  CMakeLists.txt  Data_Version.txt  Makefile  README.md  Readme.md  Test  Utility_test  ab.sh  build.gradle  cmake_install.cmake  compile_commands.json  config.h  ct.sh  gradle.properties  help.h  ht.txt  mu.sh  nob  nob.c  nob.h  nob.old  report_ex.html  settings.gradle  test_report.txt
.github/workflows/: auto.yml  clean_workflows.yml  formating.yml  formating_clang.yml  rebuild.yml  test_main_result.txt  test_main_result.yml  tests.yml
app/: build.gradle
app/src/main/cpp/: BigInteger.cpp  adaptive_funct.cpp  adaptive_funct.h  app.cpp  formula_pi_test.cpp  formula_proximate_x_extraction.cpp  piExctractor.cpp  pi_bbp.cpp  pi_chudnovsky_formula_only.cpp  pi_prodpipeline.cpp  spigot_pi.cpp
app/src/main/headers/: app.h
app/src/test/cpp/: app_test.cpp  app_utils_test.cpp
app/src/test/headers/: app_utils_test.h
arm/: common.s
arm64/: common.s
codec_util/: CMakeLists.txt  build.gradle
codec_util/main/: arithmatic_codec.cpp  arithmatic_codec.hpp  codec_util.cpp  codec_util.hpp  huffman_codec.cpp  huffman_codec.hpp  huffman_src.cpp  huffman_src.hpp  image_codec.c  image_codec.cpp  image_codec.h  image_codec.hpp  lzham.hpp  no_codec.cpp  no_codec.hpp  qoi_codec.cpp  qoi_codec.hpp  qoi_codec.txt
codec_util/main/c/: huffman_codec.txt  image_codec.c
codec_util/test/: app_test.cpp
codec_util/test/cpp/: app_test.cpp  stbi_load.cpp
codec_util/test/include/: stbi_load.hpp
codec_util/test/stbi/: stbi_load.cpp  stbi_load.hpp
data/: untitled.txt
data/codec/hash/: sha256_test.txt
data/codec/json/: json_sample2.json
data/math/: BigIntegerTest.txt  ComplexNumberTest.txt  MatrixTest.txt  QuickMathTest.txt  bigIntegerTest.txt  gintt.sh  integerTest.txt
lab/: hello_asm.asm  hello_to.c  hello_to.s  try  try.c
main/: BigDecimal.cpp  BigDecimal.hpp  BigInteger.cpp  BigInteger.hpp  ComplexNumber.hpp  common.c  common.h  common.hpp  matrix.cpp  matrix.hpp  unit.hpp
main/algorithm/: hash.c  hash.h  sort.c  sort.h
main/codec/: hash.c  hash.h  hasher.cpp  image.c  image.h  json.c  json.cpp  json.h  stb_image_write.h
main/include/: common.hpp  unit.hpp
main/include/codec/: hasher.hpp  json.hpp
main/include/math/: BigInteger.hpp  ComplexNumber.hpp  Matrix.hpp  complex_number.hpp  matrix.hpp
main/math/: BigDecimal.cpp  BigInteger.cpp  BigInteger.hpp  ComplexNumber.cpp  ComplexNumber.hpp  Matrix.cpp  Matrix.hpp  QuickMath.cpp  QuickMath.hpp  bigInteger.c  bigInteger.h  complex.c  complex.h  matrix.c  matrix.h  matrix4.c  matrix4.h
main/sorting/: sorter.hpp
main/sorting/algorithm/: merge_sort.cpp
main/src/codec/: hasher.cpp
main/src/math/: BigInteger.cpp  ComplexNumber.cpp  Matrix.cpp  QuickMath.cpp  complex_number.cpp  hash.txt  matrix.cpp
main/src/sorting/algorithm/: bubble_sort.cpp  insertion_sort.cpp  selection_sort.cpp
math_util/: CMakeLists.txt  build.gradle
math_util/data/: eDigits.txt  gintt.sh  integerTest.txt  nothing.txt  sha256.txt
math_util/main/: BigDecimal.cpp  BigDecimal.hpp  BigInteger.cpp  BigInteger.hpp  ComplexNumber.cpp  ComplexNumber.hpp  complex_number.cpp  complex_number.hpp  hash.c  hash.cpp  hash.h  hash.hpp  matrix.cpp  matrix.hpp  random.cpp  random.hpp
math_util/main/cpp/: BigDecimal.cpp  BigInteger.cpp  hash.cpp  matrix.cpp
math_util/main/include/: matrix.hpp
math_util/test/: BigInteger_test.cpp  ComplexNumber_test.cpp  app_test.cpp  hash_test.cpp  math_test.cpp  matrix_test.cpp  mining_test.cpp
math_util/test/cpp/: app_test.cpp
math_util/test/cpp/function/: extraction_test.cpp  mining_test.cpp
math_util/test/cpp/test/: complex_number_test.cpp  hash_test.cpp  matrix_test.cpp
math_util/test/function/: extraction_test.cpp  mining_test.cpp
math_util/test/hash_test/: mining_test.cpp
math_util/test/math/: extraction_test.cpp  pi_extraction_test.cpp
math_util/test/test/: BigInteger_test.cpp  ComplexNumber_test.cpp  SHA256.c  SHA256.cpp  complex_number_test.cpp  hash_test.cpp  matrix_test.cpp
miner/: CMakeLists.txt
miner/main/asm/arm/: scrypt.S  sha2.S
miner/main/asm/ppc/: scrypt.S  sha2.S
miner/main/asm/x86/: scrypt.S  sha2.S
miner/main/asm/x86_64/: scrypt.S  sha2.S
miner/main/c/: cpu-miner.c  scrypt.c  sha2.c
miner/main/c/jansson/: dump.c  hashtable.c  jansson.c  load.c  strbuffer.c  utf.c  util.c  value.c
miner/main/include/: cpuminer-config.h  miner.h  sha2.h
miner/main/include/jansson/: jansson.h  utf.h
profiling_util/: CMakeLists.txt
profiling_util/main/: clock_adjustment.cpp  clock_adjustment.hpp  simple_clock.cpp  simple_clock.hpp
profiling_util/main/cpp/: simple_clock.cpp
profiling_util/test/: app_test.cpp  clock_adjustment_test.cpp
sdl/src/: main.cpp
test/: BigInteger_test.cpp  app_test.cpp  clock_adjustment.cpp  clock_adjustment.hpp  hash.sh  main.cpp  matrix_test.cpp  qtest.c  simple_profiling.cpp  simple_profiling.hpp
test/algorithm/: hash_test.c  sort_test.c
test/codec/: hash_test.c  image_test.c
test/include/: simple_profiling.hpp
test/include/util/: clock_adjustment.hpp  simple_clock.hpp
test/math/: BigInteger_test.cpp  ComplexNumber_test.cpp  Matrix_test.cpp  QuickMath_test.cpp  bigInteger_test.c  complex_test.c  matrix_test.c  rand_test.c
test/mining/: mining_pool_test.c
test/sorting/: sorting_test.cpp
test/src/: main.cpp  simple_profiling.cpp
test/src/codec/: codec_test.cpp  hasher_test.cpp
test/src/math/: BigInteger_test.cpp  ComplexNumber_test.cpp  Matrix_test.cpp  QuickMath_test.cpp  math_test.cpp
test/src/math/function/: extraction_test.cpp
test/src/sorting/: sorting_test.cpp
test/src/util/: clock_adjustment.cpp  simple_clock.cpp
test/util/: console_out.h  profiling.c  profiling.h
utils_function/: build.gradle
utils_function/src/main/: BigInteger.cpp  BigInteger.hpp  matrix.cpp  matrix.hpp  matrix4.cpp  matrix4.hpp
utils_function/src/test/: BigInteger_test.cpp  app_test.cpp  clock_adjustment.cpp  clock_adjustment.hpp  matrix4_test.cpp  matrix_test.cpp
x64/: common.s
x86/: common.s
(+27 files in other folders)
